--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-DATABASE_URL=postgresql://resolbit:153033Pa@resolbit.postgres.database.azure.com:5432/postgres?sslmode=require
-NEXTAUTH_URL=https://www.resolbit.ar/
-NEXTAUTH_SECRET=Y7X+3iQwwpYHsaE+Pp1IrtKz75YmvjkzzN5M7Yf+S0w=
+DATABASE_URL=postgresql://hqzwpdvthy:bkbcLl$BSFJaHPWN@rest.postgres.database.azure.com:5432/postgres?sslmode=require
